# test-model-italia

./: LICENSE.txt  README.md  pyproject.toml
src/test_model/: __about__.py  talk.py
tests/: __init__.py
