[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-model"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Silvano Cerza", email = "silvanocerza@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "transformers",
  "torch",
  "sentencepiece",
  "protobuf",
  "accelerate"
]

[project.urls]
Documentation = "https://github.com/Silvano Cerza/test-model#readme"
Issues = "https://github.com/Silvano Cerza/test-model/issues"
Source = "https://github.com/Silvano Cerza/test-model"

[tool.hatch.version]
path = "src/test_model/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "black"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/test_model tests}"

[tool.coverage.run]
source_pkgs = ["test_model", "tests"]
branch = true
parallel = true
omit = ["src/test_model/__about__.py"]

[tool.coverage.paths]
test_model = ["src/test_model", "*/test-model/src/test_model"]
tests = ["tests", "*/test-model/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
